otrs/znuny.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: otrs-deploy
  labels:
    service: otrs-deploy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  serviceName: otrs-deploy
  replicas: 1
  selector:
    matchLabels:
      service: otrs-deploy
  template:
    metadata:
      labels:
        service: otrs-deploy
    spec:
      containers:
      - name: otrs
        image: ghcr.io/eol-uchile/eol-otrs:znuny-6.5.15-eol2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 2Gi
            cpu: 400m
          limits:
            memory: 2400Mi
            cpu: 750m
---
apiVersion: v1
kind: Service
metadata:
  name: otrs
spec:
  selector:
    service: otrs-deploy
  ports:
  - name: "80"
    port: 80
    targetPort: 80
